--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         </div>
         <div class="movies">
             <div class="movies__header">
-                <h2>Trending Now</h2>
+                <h2>Trending Now Hot</h2>
             </div>
             <div id="trending" class="movies__container">
             </div>
             <div class="movies__header">
-                <h2>Top Rated</h2>
+                <h2>Top Rated Movies</h2>
             </div>
             <div id="top_rated" class="movies__container">
             </div>
